[PBW-5843] Fixed adPanel's z-index when Pulse plugin is active

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -123,6 +123,7 @@ $zindex-action-icon-pause-hidden:         11990 !default;
 $zindex-player-skin-plugins:              12000 !default;
 $zindex-start-screen:                     12005 !default;
 $zindex-player-skin-plugins-click-layer:  12005 !default;
+$zindex-ad-screen-panel-click-layer:      12005 !default;
 $zindex-control-bar:                      12500 !default;
 $zindex-scrubber-bar:                     12600 !default;
 $zindex-action-icon-pause-animate:        12600 !default;
