--- a/scss/components/_ad-panel.scss
+++ b/scss/components/_ad-panel.scss
@@ -4,6 +4,15 @@
   bottom: 64px;
   width: 100%;
 
+  .oo-ad-screen-panel-click-layer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: $zindex-ad-screen-panel-click-layer;
+  }
+
   .oo-ad-top-bar {
     display: -webkit-flex;
     display: flex;
